feat(diary): validated 추가 및 fail case test 추가
