# src/main/resources/static/docs/openapi3.yaml
@@ -23,6 +23,12 @@ paths:
               diary-create:
                 value: "{\"title\":\"제목-{{$randomUUID}}\",\"content\":\"내용-{{$randomUUID}}\"\
                   }"
+              diary-create-failed-by-blank-content:
+                value: "{\"title\":\"제목-f1de13d1-1444-4aef-937f-5af6ae0579b7\",\"\
+                  content\":\" \"}"
+              diary-create-failed-by-long-title:
+                value: "{\"title\":\"제목XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\"\
+                  ,\"content\":\"내용-f2e52cbe-3c87-4b69-a08b-8c26a9c69c1b\"}"
       responses:
         "201":
           description: "201"
@@ -37,9 +43,26 @@ paths:
                 $ref: "#/components/schemas/Diary"
               examples:
                 diary-create:
-                  value: "{\"diaryId\":\"01a095c6-e30f-7fa5-8a19-e6354a345469\",\"\
-                    title\":\"제목-17e3f387-a990-455f-9451-42b2926a89c0\",\"content\"\
-                    :\"내용-bcdca857-6018-4382-98ba-2f97770d8f30\"}"
+                  value: "{\"diaryId\":\"01a095d9-8ac9-7c3c-a0a1-d71d20fe41b1\",\"\
+                    title\":\"제목-cb4a0177-29cb-4461-a155-dc876aa4c807\",\"content\"\
+                    :\"내용-6ad5365c-9076-4d50-a5dd-3541d6a2c1a4\"}"
+        "400":
+          description: "400"
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/InvalidParameterProblem"
+              examples:
+                diary-create-failed-by-blank-content:
+                  value: "{\"detail\":\"content: must not be blank\",\"instance\"\
+                    :\"/diary\",\"status\":400,\"title\":\"Bad Request\",\"type\"\
+                    :\"http://localhost:5173/problems/method-argument-not-valid\"\
+                    ,\"code\":\"METHOD_ARGUMENT_NOT_VALID\"}"
+                diary-create-failed-by-long-title:
+                  value: "{\"detail\":\"title: size must be between 0 and 255\",\"\
+                    instance\":\"/diary\",\"status\":400,\"title\":\"Bad Request\"\
+                    ,\"type\":\"http://localhost:5173/problems/method-argument-not-valid\"\
+                    ,\"code\":\"METHOD_ARGUMENT_NOT_VALID\"}"
   /diary/{diaryId}:
     get:
       tags:
@@ -86,7 +109,7 @@ paths:
                 $ref: "#/components/schemas/Diary"
               examples:
                 diary-get:
-                  value: "{\"diaryId\":\"01a095c6-e2b4-785d-b96d-3b39e2bc9d44\",\"\
+                  value: "{\"diaryId\":\"01a095d9-8a5f-7991-b72f-7d8785835657\",\"\
                     title\":\"조회할 제목\",\"content\":\"조회할 내용\"}"
         "400":
           description: "400"
@@ -119,15 +142,19 @@ components:
         content:
           type: string
           description: 일기 내용
-    ProblemDetail:
-      title: ProblemDetail
+    InvalidParameterProblem:
+      title: InvalidParameterProblem
       required:
+      - code
       - detail
       - instance
       - status
       - title
       type: object
       properties:
+        code:
+          type: string
+          description: 상세 오류 코드
         instance:
           type: string
           description: 오류가 발생한 요청 경로
@@ -144,19 +171,15 @@ components:
         status:
           type: number
           description: HTTP 상태 코드
-    InvalidParameterProblem:
-      title: InvalidParameterProblem
+    ProblemDetail:
+      title: ProblemDetail
       required:
-      - code
       - detail
       - instance
       - status
       - title
       type: object
       properties:
-        code:
-          type: string
-          description: 상세 오류 코드
         instance:
           type: string
           description: 오류가 발생한 요청 경로
